--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Plumify</title>
 </head>
+
 <body>
-    <h1>Plumify</h1>
-    <code>Insert code here</code>
+    <section id="root"></section>
 </body>
+
 </html>
